feat: Update Eclipse project settings, refactor URL and reflection usage, and adjust Java formatting.